--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryLES.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryLES.cfg
@@ -46,31 +46,7 @@ PART
 
 	EFFECTS
 	{
-		running_closed
-		{
-			AUDIO
-			{
-				channel = Ship
-				clip = sound_rocket_spurts
-				volume = 0.0 0.0
-				volume = 1.0 1.0
-				pitch = 0.0 0.2
-				pitch = 1.0 1.0
-				loop = true
-			}
-			MODEL_MULTI_PARTICLE
-			{
-				modelName = Squad/FX/LES_Thruster
-				transformName = thrustTransform
-				emission = 0.0 0.0
-				emission = 0.05 0.0
-				emission = 0.075 0.25
-				emission = 1.0 1.25
-				speed = 0.0 0.5
-				speed = 1.0 1.2
-			}
-		}
-		running_abort
+		running
 		{
 			AUDIO
 			{
@@ -176,14 +152,5 @@ PART
 		ejectionForce = 15
 		explosiveNodeID = bottom
 		staged = true
-	}
-
-	MODULE
-	{
-		name = ModuleBdbDefAGHelper
-		actionModuleName = ModuleBdbMercuryLES
-		actionModuleIndex = 0 // Index if more than one module with same name
-		actionName = AbortAction
-		actionDefaultActionGroup = Abort
 	}
 }
