--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryRetro.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryRetro.cfg
@@ -3,7 +3,7 @@ PART
 
 	name = ROC-MercuryRetroBDB
 	module = Part
-	author = CobaltWolf
+	author = CobaltWolf, capkirk
 
 	RSSROConfig = true
 	RP0conf = true
@@ -15,8 +15,8 @@ PART
 	}
 	rescaleFactor = 1.512
 	scale = 1
-	node_stack_top	  = 0.0, -0.0314, 0.0, 0.0, 1.0, 0.0, 0
-	node_attach	   = 0.0, -0.0314, 0.0, 0.0, 1.0, 0.0, 0
+	node_stack_top = 0.0, -0.0314, 0.0, 0.0, 1.0, 0.0, 0
+	node_attach = 0.0, -0.0314, 0.0, 0.0, 1.0, 0.0, 0
 	TechRequired = engineering101
 	entryCost = 200
 	cost = 52
@@ -24,7 +24,7 @@ PART
 	subcategory = 0
 	title = Mercury Retro TE-316
 	manufacturer = Thiokol
-	description = This rocket motor is meant to give you just enough kick to get you down from orbit... hopefully. Surface attach to the back of the Mercury Retro Pack in 3x symmetry. <#CD7600> AUTHOR'S NOTE: Optionally, you can enable sequential fire in the editor to have them fire one after another even when staged all at once.</color> //'
+	description = The Mercury retro motor, intended to deorbit the capsule. Place 3 on the Mercury Retropack. In real life they were fired sequentially on a short delay, but in game this is represented by a thrust curve on the motors.
 	attachRules = 1,1,0,0,0
 	mass = 0.008
 	dragModelType = default
