--- a/GameData/ROCapsules/PartConfigs/Mercury/MercuryRetro.cfg
+++ b/GameData/ROCapsules/PartConfigs/Mercury/MercuryRetro.cfg
@@ -20,7 +20,7 @@ PART
 	scale = 1.0
 	rescaleFactor = 1.0
 
-    node_stack_top = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0
+	node_stack_top = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0
 	node_stack_bottom = 0.0, -0.3, 0.0, 0.0, -1.0, 0.0, 0
 
 	// stack, srfAttach, allowStack, allowSrfAttach, allowCollision
@@ -177,4 +177,10 @@ PART
         energy = 1
         speed = 1
     }
+}
+
+//hide part, because the engine config changes the category
+@PART[ROC-MercuryRetro]:AFTER[RealismOverhaulEngines]
+{
+	@category = -1
 }
