Separate HS, fix chutes

--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryNoseCap.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryNoseCap.cfg
@@ -115,7 +115,7 @@ PART
 		mustGoDown = True
 		spareChutes = 1
 		cutSpeed = 0.5
-		reverseOrientation = true
+		invertCanopy = true
 
 		PARACHUTE
 		{
