--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryRCS.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryRCS.cfg
@@ -118,6 +118,8 @@ PART
 		mustGoDown = True
 		spareChutes = 1
 		cutSpeed = 0.5
+		invertCanopy = false
+		reverseOrientation = true
 
 		PARACHUTE
 		{
