--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryHS.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryHS.cfg
@@ -4,6 +4,8 @@ PART
 	module = Part
 	author = CobaltWolf, capkirk
 
+	RSSROConfig = true
+
 	MODEL
 	{
 		model = ROCapsules/Assets/BDB/Mercury/bluedog_Mercury_Heatshield
