Internals, hide old parts

--- a/GameData/ROCapsules/PartConfigs/Gemini/GeminiCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Gemini/GeminiCM.cfg
@@ -26,7 +26,7 @@ PART
 	TechRequired = spaceExploration
 	entryCost = 1800
 	cost = 2600
-	category = Pods
+	category = -1
 	subcategory = 0
 	title = Gemini Cabin
 	manufacturer = McDonnell Aircraft
