--- a/GameData/ROCapsules/PartConfigs/Gemini/GeminiEquipmentSection.cfg
+++ b/GameData/ROCapsules/PartConfigs/Gemini/GeminiEquipmentSection.cfg
@@ -28,7 +28,7 @@ PART
 	TechRequired = fuelSystems
 	entryCost = 1200
 	cost = 850
-	category = Propulsion
+	category = -1
 	subcategory = 0
 	title = Gemini Adapter Equipment Section
 	manufacturer = McDonnell Aircraft
