--- a/GameData/ROCapsules/PartConfigs/Gemini/GeminiNosecone.cfg
+++ b/GameData/ROCapsules/PartConfigs/Gemini/GeminiNosecone.cfg
@@ -30,7 +30,7 @@ PART
 	TechRequired = spaceExploration
 	entryCost = 200
 	cost = 200
-	category = Coupling
+	category = -1
 	subcategory = 0
 	title = Gemini Rendezvous and Recovery Section Fairing
 	manufacturer = McDonnell Aircraft
