--- a/GameData/ROCapsules/PartConfigs/Gemini/GeminiRetrogradeSection.cfg
+++ b/GameData/ROCapsules/PartConfigs/Gemini/GeminiRetrogradeSection.cfg
@@ -21,7 +21,7 @@ PART
 	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
 	sound_vent_large = decouple
 	sound_rocket_mini = running
-	category = Control
+	category = -1
 	subcategory = 0
 	title = Gemini Adapter Retrograde Section
 	manufacturer = McDonnell Aircraft
