--- a/GameData/ROCapsules/PartConfigs/Gemini/GeminiNoseCap.cfg
+++ b/GameData/ROCapsules/PartConfigs/Gemini/GeminiNoseCap.cfg
@@ -31,7 +31,7 @@ PART
 	TechRequired = aerodynamicSystems
 	entryCost = 100
 	cost = 50
-	category = Utility
+	category = -1
 	subcategory = 0
 	title = Gemini Nose Fairing
 	manufacturer = McDonnell Aircraft
