--- a/GameData/ROCapsules/PartConfigs/Gemini/GeminiNoseconeAero.cfg
+++ b/GameData/ROCapsules/PartConfigs/Gemini/GeminiNoseconeAero.cfg
@@ -29,7 +29,7 @@ PART
 	TechRequired = aerodynamicSystems
 	entryCost = 100
 	cost = 150
-	category = Utility
+	category = -1
 	subcategory = 0
 	title = Gemini Aerodynamic Nose Fairing
 	manufacturer = McDonnell Aircraft
