--- a/GameData/ROCapsules/PartConfigs/Gemini/GeminiParachute.cfg
+++ b/GameData/ROCapsules/PartConfigs/Gemini/GeminiParachute.cfg
@@ -26,7 +26,7 @@ PART
 	TechRequired = landing
 	entryCost = 1200
 	cost = 1450
-	category = Utility
+	category = -1
 	subcategory = 0
 	title = Gemini Recovery Main Parachute
 	manufacturer = McDonnell Aircraft
