--- a/GameData/ROCapsules/PartConfigs/Gemini/GeminiParachuteDrogue.cfg
+++ b/GameData/ROCapsules/PartConfigs/Gemini/GeminiParachuteDrogue.cfg
@@ -28,7 +28,7 @@ PART
 	TechRequired = advLanding
 	entryCost = 4200
 	cost = 1350
-	category = Utility
+	category = -1
 	subcategory = 0
 	title = Gemini Recovery Drogue Parachute
 	manufacturer = McDonnell Aircraft
