--- a/GameData/ROCapsules/PartConfigs/Gemini/GeminiRCS.cfg
+++ b/GameData/ROCapsules/PartConfigs/Gemini/GeminiRCS.cfg
@@ -26,7 +26,7 @@ PART
 	TechRequired = fuelSystems
 	entryCost = 600
 	cost = 250
-	category = Control
+	category = -1
 	subcategory = 0
 	title = Gemini RCS Thruster Pack
 	manufacturer = McDonnell Aircraft
