--- a/GameData/ROCapsules/PartConfigs/Gemini/GeminiReentryControlSystem.cfg
+++ b/GameData/ROCapsules/PartConfigs/Gemini/GeminiReentryControlSystem.cfg
@@ -26,7 +26,7 @@ PART
 	TechRequired = earlyDocking
 	entryCost = 36000
 	cost = 720
-	category = Control
+	category = -1
 	subcategory = 0
 	title = Gemini Re-entry Control System
 	manufacturer = McDonnell Aircraft
