--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiCabin.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiCabin.cfg
@@ -30,8 +30,8 @@ PART
 	subcategory  = 0
 	title        = Big G Crew Module
 	manufacturer = McDonnell Douglas
-	description  = As operations in space become more complex, more crew members are needed. This expanded crew module replaces the standard Gemini service module, allowing seven additional crew members to ride to space. To be used with either the Apollo Service Module for deep space operations, or the Big Gemini Service Module for LEO operations.
-	mass = 1.85
+	description  = As operations in space become more complex, more crew members are needed. This expanded crew module replaces the standard Gemini service module, allowing seven additional crew members to ride to space. To be used with either a modified Apollo Service Module for deep space operations, or the Big Gemini Service Module for LEO operations.
+	mass = 3.0
 	dragModelType  = default
 	maximum_drag   = 0.20
 	minimum_drag   = 0.15
