--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiDecoupler.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiDecoupler.cfg
@@ -64,6 +64,17 @@ PART
 
 	MODULE
 	{
+		name = ModuleAnimateGeneric
+		animationName = deploy
+		isOneShot = true
+		startEventGUIName = Retract Umbilicals
+		endEventGUIName = Extend Umbilicals
+		actionGUIName = Toggle Umbilicals
+		allowAnimationWhileShielded = True
+	}
+
+	MODULE
+	{
 		name = ModuleJettison
 		jettisonName = Umbilical
 		bottomNodeName = top
