--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiMOLPort.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiMOLPort.cfg
@@ -3,11 +3,15 @@ PART
 	name = bluedog_MOL_DockingPort
 	module = Part
 	author = CobaltWolf
-MODEL
-{
-	model = Bluedog_DB/Parts/MOL/bluedog_MOL_DockingPort
-}
-	rescaleFactor = 1.0
+
+	RSSROConfig = True
+
+	MODEL
+	{
+		model = ROCapsules/Assets/BDB/Gemini/bluedog_MOL_DockingPort
+	}
+
+	rescaleFactor = 1.524
 	scale = 1.0
 	node_stack_bottom = 0.0, -0.11651, 0.0, 0.0, -1.0, 0.0, 0
 	node_stack_top = 0.0, 0.11739, 0.0, 0.0, 1.0, 0.0, 0
@@ -21,13 +25,9 @@ MODEL
 	cost = 1000
 	category = Coupling
 	subcategory = 0
-	title = MOS-DM 1.875m Docking Mechanism
-	manufacturer = Bluedog Design Bureau
-	description = This large docking module is used to connect MOS segments to each other. It is capable of soft docking to line up the segments, before retracting and solidifying the connection.
-	
-	real_title = MOL 1.875m Docking Mechanism
-	real_manufacturer = Douglas Aircraft
-	real_description = This large docking module is used to connect MOL segments to each other. It is capable of soft docking to line up the segments, before retracting and solidifying the connection.
+	title = MOL Docking Mechanism
+	manufacturer = Douglas Aircraft
+	description = This large docking module is used to connect MOL segments to each other. It is capable of soft docking to line up the segments, before retracting and solidifying the connection.
 	
 	attachRules = 1,0,1,1,1
 	mass = 0.1
@@ -67,17 +67,5 @@ MODEL
 		actionGUIName = Toggle Ring
 		allowAnimationWhileShielded = False
 	}
-
-//MODULE
-//{
-//	name = ModuleLight
- //   lightName = spotlight
-//	useAnimationDim = true
-//	lightBrightenSpeed = 3.5
-//	lightDimSpeed = 3.5
-//	resourceAmount = 0.001
-//	animationName = Agena_Lights
-//	useResources = true
-//}
 
 }
