--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiSM.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiSM.cfg
@@ -1,6 +1,6 @@
 PART
 {
-	name = bluedog_BigG_CylindricalSM
+	name = ROC-BigGeminiSM
 	module = Part
 	author = CobaltWolf
 
@@ -17,7 +17,7 @@ PART
 	CrewCapacity = 3
 	TechRequired = specializedControl
 	entryCost = 13000
-	cost = 4800 // crew space + mp + ore (supply)
+	cost = 4800
 	category = Utility
 	subcategory = 0
 	title = Big Gemini Service Module
