add missing bits

--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiLES.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiLES.cfg
@@ -92,31 +92,38 @@ PART
 
 	MODULE
 	{
-		name = ModuleEnginesFX
-		engineID = LES
-		powerEffectName = running_closed
+		name = ModuleEnginesRF
 		thrustVectorTransformName = thrustTransform
-		exhaustDamage = False
+		powerEffectName = running_closed
 		throttleLocked = True
+		exhaustDamage = True
 		ignitionThreshold = 0.1
-		minThrust = 0
-		//maxThrust = 200
-		maxThrust = 335
-		heatProduction = 400
-		fxOffset = 0, 0, 0.25
-		EngineType = SolidBooster
+		minThrust = 693.7
+		maxThrust = 693.7
+		heatProduction = 84
+		useEngineResponseTime = False
+		engineAccelerationSpeed = 0.0
+		allowShutdown = False
+		fxOffset = 0, 0, 0.15
+		staging = false
+		
+		%ullage = False
+		%pressureFed = False
+		%ignitions = 1
+		
 		PROPELLANT
 		{
-			name = SolidFuel
+			name = HTPB
 			ratio = 1.0
 			DrawGauge = True
 		}
 		atmosphereCurve
 		{
-			key = 0 180
-			key = 1 160
-			key = 8 0.001
+			key = 0 172
+			key = 1 164
+			key = 6 0.001
 		}
+		ActivatesEvenIfDisconnected = true
 	}
 
 	MODULE
@@ -126,12 +133,19 @@ PART
 		explosiveNodeID = bottom
 	}
 
-	RESOURCE
+	MODULE
 	{
-		name = SolidFuel
-		//amount = 10
-		//maxAmount = 10
-		amount = 15
-		maxAmount = 15
+		name = ModuleFuelTanks
+		type = HTPB
+		volume = 805.7
+		basemass = -1
+
+		//  HTPB/AP propellant mixture mass ~1426 kg.
+		TANK
+		{
+			name = HTPB
+			amount = 805.7
+			maxAmount = 805.7
+		}
 	}
 }
