--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiHSLunar.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiHSLunar.cfg
@@ -1,6 +1,6 @@
 PART
 {
-	name = ROC-GeminiHSBDB
+	name = ROC-GeminiHSLunarBDB
 	module = Part
 	author = CobaltWolf, capkirk
 
@@ -23,9 +23,9 @@ PART
 	cost = 360
 	category = Thermal
 	subcategory = 0
-	title = Gemini Heatshield
+	title = Gemini Lunar Heatshield
 	manufacturer = McDonnell Aircraft
-	description = Heatshield for the Gemini Capsule. Can be switched to the Gemini B configuration with a hatch
+	description = Improved, lunar rated heatshield for the Gemini Capsule. Can be switched to the Gemini B configuration with a hatch
 	attachRules = 1,0,1,0,0
 	mass = 0.050
 	dragModelType = default
@@ -49,7 +49,7 @@ PART
 	//use new heat shield tagging system to configure the shield instead
 	resetHeatShieldMass = True
 	resetHeatShieldAblator = True
-	heatShieldTag = LEO
+	heatShieldTag = Lunar
 	heatShieldDiameter = 2.2
 
 	MODULE
