--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryHS.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryHS.cfg
@@ -63,53 +63,9 @@ PART
 		disableAfterPlaying = true
 	}
 
-	MODULE:NEEDS[!DeadlyReentry]
-	{
-		name = ModuleAblator
-		ablativeResource = Ablator
-		outputResource = CharredAblator
-		outputMult = 0.75
-		useChar = True
-		charModuleName = HeatShieldCharAnim
-		charMin = 1
-		charMax = 1
-		lossExp = -6000
-		lossConst = 0.13
-		pyrolysisLossFactor = 6000
-		ablationTempThresh = 400
-		reentryConductivity = 0.01
-	}
-
-	MODULE:NEEDS[DeadlyReentry]
-	{
-		name = ModuleHeatShield
-		ablativeResource = Ablator
-		outputResource = CharredAblator
-		outputMult = 0.75
-		useChar = True
-		charModuleName = HeatShieldCharAnim
-		charMin = 0
-		charMax = 1
-		lossExp = -6000
-		lossConst = 0.13
-		pyrolysisLossFactor = 6000
-		ablationTempThresh = 400
-		reentryConductivity = 0.01
-		depletedMaxTemp = 1200
-	}
-
-	RESOURCE
-	{
-		name = Ablator
-		amount = 125
-		maxAmount = 125
-	}
-
-	RESOURCE
-	{
-		name = CharredAblator
-		amount = 0
-		maxAmount = 100
-		isTweakable = False
-	}
+	//use new heat shield tagging system to configure the shield instead
+	resetHeatShieldMass = True
+	resetHeatShieldAblator = True
+	heatShieldTag = LEO
+	heatShieldDiameter = 1.89
 }
