--- a/GameData/ROCapsules/Assets/BDB/Gemini/Paint/TTV/TTV.cfg
+++ b/GameData/ROCapsules/Assets/BDB/Gemini/Paint/TTV/TTV.cfg
@@ -1,4 +1,4 @@
-@PART[bluedog_Gemini_Capsule]:FOR[Bluedog_DB]
+@PART[ROC-GeminiCM]:FOR[Bluedog_DB]
 {
 	@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[meshSwitchPaint]]
 	{
@@ -8,19 +8,19 @@
 			transform = Black
 			TEXTURE
 			{
-				texture = Bluedog_DB/Parts/Gemini/Paint/TTV/bluedog_Gemini_Capsule_TTV
+				texture = ROCapsules/Assets/BDB/Gemini/Paint/TTV/bluedog_Gemini_Capsule_TTV
 				baseTransform = Black
 				transform = Capsule_Base
 			}
 			TEXTURE
 			{
-				texture = Bluedog_DB/Parts/Gemini/Paint/TTV/bluedog_Gemini_Capsule_TTV
+				texture = ROCapsules/Assets/BDB/Gemini/Paint/TTV/bluedog_Gemini_Capsule_TTV
 				transform = Portholes
 			}
 		}
 	}
 }
-@PART[bluedog_Gemini_ReentryRCS,bluedog_Gemini_DockingPort,bluedog_Gemini_LunarRecon_Camera]:FOR[Bluedog_DB]
+@PART[ROC-GeminiReentryControlSystem,ROC-GeminiNosecone,ROC-GeminiNoseconeAero]:FOR[Bluedog_DB]
 {
 	@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[meshSwitchPaint]]
 	{
@@ -29,13 +29,13 @@
 			name = TTV
 			TEXTURE
 			{
-				texture = Bluedog_DB/Parts/Gemini/Paint/TTV/bluedog_Gemini_Capsule_TTV
+				texture = ROCapsules/Assets/BDB/Gemini/Paint/TTV/bluedog_Gemini_Capsule_TTV
 				transform = Skin
 			}
 		}
 	}
 }
-@PART[bluedog_Gemini_MainParachute]:FOR[Bluedog_DB]
+@PART[ROC-GeminiParachute]:FOR[Bluedog_DB]
 {
 	@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[meshSwitchPaint]]
 	{
@@ -44,28 +44,13 @@
 			name = TTV
 			TEXTURE
 			{
-				texture = Bluedog_DB/Parts/Gemini/Paint/TTV/bluedog_Gemini_Capsule_TTV
-			}
-		}
-	}
-}
-@PART[bluedog_Gemini_HorizonScanners]:FOR[Bluedog_DB]
-{
-	@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[meshSwitchPaint]]
-	{
-		SUBTYPE
-		{
-			name = TTV
-			TEXTURE
-			{
-				texture = Bluedog_DB/Parts/Gemini/Paint/TTV/bluedog_Gemini_Capsule_TTV
-				transform = jettison
+				texture = ROCapsules/Assets/BDB/Gemini/Paint/TTV/bluedog_Gemini_Capsule_TTV
 			}
 		}
 	}
 }
 
-@PART[bluedog_Gemini_RumbleSeat]:FOR[Bluedog_DB]
+@PART[ROC-BigGeminiCabin]:FOR[Bluedog_DB]
 {
 	@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[meshSwitchPaint]]
 	{
@@ -74,61 +59,8 @@
 			name = TTV
 			TEXTURE
 			{
-				texture = Bluedog_DB/Parts/Gemini/Paint/TTV/bluedog_Gemini_Capsule_TTV
-				transform = Mesh
-			}
-		}
-	}
-}
-@PART[bluedog_BigG_Cabin]:FOR[Bluedog_DB]
-{
-	@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[meshSwitchPaint]]
-	{
-		SUBTYPE
-		{
-			name = TTV
-			TEXTURE
-			{
-				texture = Bluedog_DB/Parts/Gemini/Paint/TTV/bluedog_Gemini_BigGCabin_TTV
+				texture = ROCapsules/Assets/BDB/Gemini/Paint/TTV/bluedog_Gemini_BigGCabin_TTV
 				transform = Skin
-			}
-		}
-	}
-}
-
-@PART[bluedog_Shuguang_Nose]:FOR[Bluedog_DB]
-{
-	@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[meshSwitchPaint]]
-	{
-		SUBTYPE
-		{
-			name = TTV
-			TEXTURE
-			{
-				texture = Bluedog_DB/Parts/Gemini/Paint/TTV/bluedog_Gemini_BigGCabin_TTV
-				transform = Skin
-			}
-		}
-	}
-}
-@PART[bluedog_Gemini_AugustusCapsule]:FOR[Bluedog_DB]
-{
-	@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[meshSwitchPaint]]
-	{
-		SUBTYPE
-		{
-			name = TTV
-			transform = Black
-			TEXTURE
-			{
-				texture = Bluedog_DB/Parts/Gemini/Paint/TTV/bluedog_Gemini_Capsule_TTV
-				baseTransform = Black
-				transform = Capsule_Base
-			}
-			TEXTURE
-			{
-				texture = Bluedog_DB/Parts/Gemini/Paint/TTV/bluedog_Gemini_BigGCabin_TTV
-				transform = BigG
 			}
 		}
 	}
