Fix patch/config issues

--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/RP_GeminiBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/RP_GeminiBDB.cfg
@@ -1,5 +1,5 @@
 //Star 13E retro
-@PART[ROC-GeminiRetroBDB]:FOR[RealPlume]:NEEDS[SmokeScreen]
+@PART[ROC-GeminiRetroBDB]:NEEDS[SmokeScreen]
 {
 	PLUME
 	{
@@ -26,7 +26,7 @@
 }
 
 //Gemini B sepmotors
-@PART[ROC-GeminiBEquipmentSection]:FOR[RealPlume]:NEEDS[SmokeScreen]
+@PART[ROC-GeminiBEquipmentSection]:NEEDS[SmokeScreen]
 {
 	PLUME
 	{
