Fix OAMS thrusters

--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiOAMS.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiOAMS.cfg
@@ -26,7 +26,7 @@ PART
 	TechRequired = flightControl
 	entryCost = 800
 	cost = 150
-	category = Propulsion
+	category = Control
 	subcategory = 0
 	title = Gemini Orbit Attitude and Maneuvering System (RCS)
 	manufacturer = TRW
@@ -74,7 +74,7 @@ PART
 				emission = 1.0 1.0
 				speed = 0.0 0.8
 				speed = 1.0 1.0
-				localRotation = -90, 0, 0
+				localRotation = 0, 0, 0
 			}
 		}
 	}
@@ -146,7 +146,7 @@ PART
 	TechRequired = flightControl
 	entryCost = 800
 	cost = 150
-	category = Propulsion
+	category = Control
 	subcategory = 0
 	title = Gemini Orbit Attitude and Maneuvering System
 	manufacturer = TRW
@@ -194,7 +194,7 @@ PART
 				emission = 1.0 1.0
 				speed = 0.0 0.8
 				speed = 1.0 1.0
-				localRotation = -90, 0, 0
+				localRotation = 0, 0, 0
 			}
 		}
 	}
