--- a/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSSolarPanel.cfg
+++ b/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSSolarPanel.cfg
@@ -10,7 +10,7 @@ PART
 	MODEL
 	{
 		model = ROCapsules/Assets/DECQ/Soyuz MS/SOLAR_PANEL
-        scale = 1.135, 1.0, 1.0
+		scale = 1.135, 1.0, 1.0
 		rotation = 180, 0, 0
 	}
 	scale = 1.0
@@ -26,8 +26,8 @@ PART
 	subcategory = 0
 	
 	title = Soyuz/Progress Solar Array
-    manufacturer = RKK Energia
-    description = A solar array used on modern Soyuz and Progress spacecraft variants. Efficient, reliable and lightweight.
+	manufacturer = RKK Energia
+	description = A solar array used on modern Soyuz and Progress spacecraft variants. Efficient, reliable and lightweight.
 	
 	attachRules = 0,1,0,0,1
 	mass = 0.075
@@ -37,7 +37,7 @@ PART
 	angularDrag = 0.5
 	crashTolerance = 10
 	maxTemp = 673.15
-    skinMaxTemp = 673.15
+	skinMaxTemp = 673.15
 	bulkheadProfiles = srf
 	thermalMassModifier = 2.0
 	emissiveConstant = 0.95
@@ -45,16 +45,6 @@ PART
 
 	tags = soyuz progress DECQ solar charge deploy e/c elect energ extend fold generat light panel photo power retract sun track unfold volt watt
 
-	//MODULE
-	//{
-	//	name = ModuleDeployableSolarPanel
-	//	animationName = SOLAR
-	//	raycastTransformName = sunPivot
-	//	resourceName = ElectricCharge
-	//	chargeRate = 3.7
-	//}
-
-	
 	MODULE
 	{
 		name = ModuleDeployableSolarPanel
@@ -64,46 +54,16 @@ PART
 		animationName = SOLAR
 		secondaryTransformName = sunCatcher
 		isBreakable = False
-        retractable = False
+		retractable = False
 	}	
 	
-	
-	MODULE
+	// Should these be here, given ROC depends on ROLib, which depends on TexturesUnlimited?
+	MODULE:NEEDS[TextureReplacer&&!TexturesUnlimited]
 	{
 		name = TRReflection
 		shader = Reflective/Bumped Diffuse
 		colour = 0.3 0.3 0.3
 		interval = 2
-		meshes = Cube_054
+		meshes = Cube_054 Cube_057 Cube_062 Cube_65
 	}
-
-	MODULE
-	{
-		name = TRReflection
-		shader = Reflective/Bumped Diffuse
-		colour = 0.3 0.3 0.3
-		interval = 2
-		meshes = Cube_057
-	}
-
-	MODULE
-	{
-		name = TRReflection
-		shader = Reflective/Bumped Diffuse
-		colour = 0.3 0.3 0.3
-		interval = 2
-		meshes = Cube_062
-	}
-
-	MODULE
-	{
-		name = TRReflection
-		shader = Reflective/Bumped Diffuse
-		colour = 0.3 0.3 0.3
-		interval = 2
-		meshes = Cube_65
-	}
-
 }
-
-	
