--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiHSLunar.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiHSLunar.cfg
@@ -1,6 +1,6 @@
 PART
 {
-	name = ROC-BigGeminiHS
+	name = ROC-BigGeminiHSLunar
 	module = Part
 	author = CobaltWolf
 
@@ -22,7 +22,7 @@ PART
 	cost = 360
 	category = Thermal
 	subcategory = 0
-	title        = Big Gemini Heat Shield
+	title        = Big Gemini Lunar Heat Shield
 	manufacturer = McDonnell Aircraft
 	description  = Heatshield for the Big Gemini capsule
 	attachRules = 1,0,1,0,0
@@ -48,7 +48,7 @@ PART
 	//use new heat shield tagging system to configure the shield instead
 	resetHeatShieldMass = True
 	resetHeatShieldAblator = True
-	heatShieldTag = LEO
+	heatShieldTag = Lunar
 	heatShieldDiameter = 3.9
 
 	MODULE
