--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiSM.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiSM.cfg
@@ -22,7 +22,7 @@ PART
 	subcategory = 0
 	title = Big Gemini Service Module
 	manufacturer = McDonnell Aircraft
-	description = A large 2.5m+ service module for the 1969 Big Gemini concept. Includes a large pressurized volume in the aft for cargo and crew space. This Service Module is also compatible with Apollo (although the internal compartment will be inaccessable since Apollo doesn't have a hatch in it's heat shield), and the Apollo Service Module is also compatible with Big Gemini.
+	description = A large 2.5m+ service module for the 1969 Big Gemini concept. Includes a large pressurized volume in the aft for cargo and crew space. This Service Module is also compatible with Apollo (although it will need a custom adapter, and the internal compartment will be inaccessable since Apollo doesn't have a hatch in it's heat shield), and the Apollo Service Module is also compatible with Big Gemini (Adapter not included). NOTE: This contains no propulsion, add RCS thrusters.
 	attachRules = 1,0,1,1,0
 	mass = 3.5625
 
