New Gemini Models (#34)
* BDB Gemini
* Internals, hide old parts

--- a/GameData/ROCapsules/PartConfigs/Gemini/GeminiEquipmentSection.cfg
+++ b/GameData/ROCapsules/PartConfigs/Gemini/GeminiEquipmentSection.cfg
@@ -28,9 +28,9 @@ PART
 	TechRequired = fuelSystems
 	entryCost = 1200
 	cost = 850
-	category = Propulsion
+	category = -1
 	subcategory = 0
-	title = Gemini Adapter Equipment Section	
+	title = Gemini Adapter Equipment Section
 	manufacturer = McDonnell Aircraft
 	description = The Gemini Adapter Equipment Section.	 It contains O2 and H2 for fuel cell consumption and life support.	It also contains fuel for manoeuvring and attitude control thrusters.  This is the configuration as found on Gemini 10+. RCS O/F Ratio 1.3:1.
 
