--- a/GameData/ROCapsules/PartConfigs/Dynasoar/DynaCabin.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/DynaCabin.cfg
@@ -1,23 +1,26 @@
 PART
 {
-	name = DynaPassCabin
+	name = ROC-DynaCabin
 	module = Part
-	author = silentVelcro
+	author = silentVelcro, capkirk
+
+	RSSROConfig = true
+
 	MODEL
 	{
-  	model = LonesomeRobots/DynaSoar/DynaPass
+		model = ROCapsules/Assets/LonesomeRobot/DynaPass
 	}
 
-	rescaleFactor = 1
+	rescaleFactor = 1.5625
 	node_stack_bay = 0.0, -0.224, 0.288, 0.0, 0.0, 1.0, 1
-	CrewCapacity = 1
+	CrewCapacity = 2
 	TechRequired = spaceExploration
 	entryCost = 12400
 	cost = 4000
 	category = Utility
 	subcategory = 0
 	title = DynaSoar Passenger Cabin
-	manufacturer = LonesomeRobots
+	manufacturer = Boeing
 	attachRules = 1,0,1,1,0
 	mass = 0.3
 	dragModelType = default
@@ -27,14 +30,16 @@ PART
 	crashTolerance = 6
 	breakingForce = 200
 	breakingTorque = 200
-	maxTemp = 1000
-	skinMaxTemp = 2000
+	maxTemp = 900
+	skinMaxTemp = 2283
 	bulkheadProfiles = size2
 	tags = base cabin (can outpost passenger statio tour tuna
+
 	INTERNAL
 	{
 		name = DYNA_PASS_INTERIOR
 	}
+
 	MODULE
 	{
 		name = ModuleScienceExperiment
@@ -50,6 +55,7 @@ PART
 		usageReqMaskInternal = 5
 		usageReqMaskExternal = -1
 	}
+
 	MODULE
 	{
 		name = ModuleScienceContainer
@@ -58,5 +64,4 @@ PART
 		evaOnlyStorage = True
 		storageRange = 2.0
 	}
-
 }
