--- a/GameData/ROCapsules/PartConfigs/Dynasoar/DynaElevonL.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/DynaElevonL.cfg
@@ -3,6 +3,8 @@ PART
 	name = ROC-DynaElevonL
 	module = Part
 	author = silentVelcro
+	
+	RSSROConfig = true
 
 	MODEL
 	{
@@ -57,4 +59,15 @@ PART
 		ignoreRoll = False
 	}
 
+	//MODULE
+	//{
+	//	name = FARControllableSurface
+	//	MAC = 1.45
+	//	MidChordSweep = 4.08
+	//	b_2 = 1.75
+	//	TaperRatio = 1.0
+	//	maxdeflect = 20
+	//	ctrlSurfFrac = 1
+	//	nonSideAttach = 1
+	//}
 }
