--- a/GameData/ROCapsules/PartConfigs/Dynasoar/DynaElevonR.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/DynaElevonR.cfg
@@ -3,6 +3,8 @@ PART
 	name = ROC-DynaElevonR
 	module = Part
 	author = silentVelcro,capkirk
+	
+	RSSROConfig = true
 
 	MODEL
 	{
@@ -38,8 +40,8 @@ PART
 	crashTolerance = 15
 	breakingForce = 999
 	breakingTorque = 999
-	maxTemp = 3400
-	explosionPotential = 0.1
+	maxTemp = 1273
+	skinMaxTemp = 2283
 	bulkheadProfiles = srf
 
 	MODULE
@@ -51,10 +53,21 @@ PART
 		ctrlSurfaceRange = 20
 		ctrlSurfaceArea = 0.95
 		actuatorSpeed = 20
-		transformName = Elevon_R
+		transformName = Elevon_L
 		ignorePitch = False
 		ignoreYaw = True
 		ignoreRoll = False
 	}
 
+	//MODULE
+	//{
+	//	name = FARControllableSurface
+	//	MAC = 1.45
+	//	MidChordSweep = 4.08
+	//	b_2 = 1.75
+	//	TaperRatio = 1.0
+	//	maxdeflect = 20
+	//	ctrlSurfFrac = 1
+	//	nonSideAttach = 1
+	//}
 }
