--- a/GameData/ROCapsules/PartConfigs/Dynasoar/DynaFuelTank.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/DynaFuelTank.cfg
@@ -1,14 +1,17 @@
 PART
 {
-	name = DynaFuel
+	name = ROC-DynaFuelTank
 	module = Part
 	author = silentVelcro
+
+	RSSROConfig = true
+
 	MODEL
 	{
-  	model = LonesomeRobots/DynaSoar/DynaFuel
+		model = ROCapsules/Assets/LonesomeRobot/DynaFuel
 	}
 
-	rescaleFactor = 1
+	rescaleFactor = 1.5625
 	node_stack_bay = 0.0, -0.224, 0.288, 0.0, 0.0, 1.0, 1
 	TechRequired = spaceExploration
 	entryCost = 12400
@@ -26,24 +29,18 @@ PART
 	crashTolerance = 6
 	breakingForce = 200
 	breakingTorque = 200
-	maxTemp = 2400
-	skinMaxTemp = 3600
+	maxTemp = 900
+	skinMaxTemp = 2283
 	bulkheadProfiles = size2
 	tags = fuel tank
 
-RESOURCE
-{
- name = MonoPropellant
- amount = 50
- maxAmount = 50
-}
 
-RESOURCE
-{
-	name = ElectricCharge
-	amount = 200
-	maxAmount = 200
-
-}
+	MODULE
+	{
+		name = ModuleFuelTanks
+		type = ServiceModule
+		volume = 2000
+		basemass = -1
+	}
 
 }
