--- a/GameData/ROCapsules/PartConfigs/Dynasoar/DynaSkidFront.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/DynaSkidFront.cfg
@@ -32,7 +32,8 @@ PART
 	maximum_drag = 0.3
 	minimum_drag = 0.2
 	angularDrag = 1
-	maxTemp = 3600
+	maxTemp = 1273
+	skinMaxTemp = 2283
 	crashTolerance = 175
 	breakingForce = 250
 	breakingTorque = 250
