--- a/GameData/ROCapsules/PartConfigs/Dynasoar/DynaSkidRear.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/DynaSkidRear.cfg
@@ -1,6 +1,6 @@
 PART
 {
-	name = ROC-DynaSkidBack
+	name = ROC-DynaSkidRear
 	module = Part
 	author = silentVelcro
 
@@ -35,7 +35,8 @@ PART
 	maximum_drag = 0.0
 	minimum_drag = 0.02
 	angularDrag = 0.0
-	maxTemp = 3600
+	maxTemp = 1273
+	skinMaxTemp = 2283
 	crashTolerance = 175
 	breakingForce = 250
 	breakingTorque = 250
