--- a/GameData/ROCapsules/PartConfigs/Dynasoar/DynaWingRight.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/DynaWingRight.cfg
@@ -17,8 +17,11 @@ PART
 	node_stack_wing = 0.42, 2.6, 1.2, 0, 0, 1, 1
 	node_stack_eleR = 0.47, 0.8, 0.71, 0, -1, 0, 1
 	node_stack_gear = 0.45, 0.96, 0.69, 1, 0, 0, 1
+	
+	attachRules = 1,1,1,1,1
 
 	//CoLOffset = 0, 0.57, 0
+	CoMOffset = 0.7, 4.0, 1.5
 
 	TechRequired = aerodynamicSystems
 	entryCost = 7000
@@ -29,7 +32,7 @@ PART
 	manufacturer = Boeing
 	description = Right wing and rudder of the DynaSoar. Limit its aero functionality only to Yaw. Also limit its RCS functionality to Roll only via the actuation toggles. Rudder fins can be used as an airbrake. Add them to the Brakes action group.
 
-	mass = 0.900
+	mass = 0.600
 
 	thermalMassModifier = 4.0
 	heatConductivity = 0.06
@@ -44,8 +47,8 @@ PART
 	breakingTorque = 999
 
 	maxTemp = 3400
-
-	attachRules = 1,1,1,1,1
+	
+	bodyLiftMultiplier = 2
 
 	EFFECTS
 		{
@@ -79,26 +82,42 @@ PART
 		}
 
 	MODULE
+	{
+		name = ModuleRCSFX
+		stagingEnabled = True
+		thrusterTransformName = RCSTHRUSTER
+		thrusterPower = 0.445
+
+		resourceFlowMode = STACK_PRIORITY_SEARCH
+		runningEffectName = runningrcs
+		enableRoll = True
+		enableYaw = False
+		enablePitch = False
+		enableX = False
+		enableY = False
+		enableZ = False
+
+		PROPELLANT
 		{
-			name = ModuleRCSFX
-			stagingEnabled = False
-			thrusterTransformName = RCSTHRUSTER
-			thrusterPower = 1.0
-			resourceName = HTP
-			resourceFlowMode = STAGE_PRIORITY_FLOW
-			runningEffectName = runningrcs
-			enableRoll = True
-			enableYaw = False
-			enablePitch = False
-			enableX = False
-			enableY = False
-			enableZ = False
-			atmosphereCurve
-			{
-				key = 0 290
-				key = 1 275
-			}
+			name = HTP
+			ratio = 1.0
 		}
+
+		atmosphereCurve
+		{
+			key = 0 290
+			key = 1 275
+		}
+	}
+
+	MODULE
+	{
+		name = ModuleLiftingSurface
+		useInternalDragModel = True
+		deflectionLiftCoeff = 1.88
+		dragAtMaxAoA = 0.28
+		dragAtMinAoA = 0.0
+	}
 
 	MODULE
 	{
@@ -109,11 +128,22 @@ PART
 		ctrlSurfaceRange = 20
 		ctrlSurfaceArea = 0.95
 		actuatorSpeed = 20
-		transformName = Rudder_R
+		transformName = Rudder_L
 		ignorePitch = True
 		ignoreYaw = False
 		ignoreRoll = True
 		deployInvert = True
 	}
 
+	//MODULE
+	//{
+	//	name = FARControllableSurface
+	//	MAC = 3.57
+	//	MidChordSweep = 60.11
+	//	b_2 = 1.75
+	//	TaperRatio = 0.120
+	//	maxdeflect = 20
+	//	ctrlSurfFrac = 0.1
+	//	nonSideAttach = 0
+	//}
 }
