--- a/GameData/ROCapsules/PartConfigs/Dynasoar/DynaAftBay.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/DynaAftBay.cfg
@@ -38,7 +38,7 @@ PART
 
 	attachRules = 1,0,1,1,0
 
-	mass = 1.00
+	mass = 0.370
 	dragModelType = default
 	maximum_drag = 0.21
 	minimum_drag = 0.21
@@ -46,7 +46,8 @@ PART
 	crashTolerance = 24
 	breakingForce = 80
 	breakingTorque = 80
-	maxTemp = 2100
+	maxTemp = 900
+	skinMaxTemp = 1273
 	stageOffset = 2
 	childStageOffset = 1
 
@@ -80,8 +81,58 @@ PART
 					speed = 1.0 1.0
 					localRotation = -90, 0, 0
 				}
-			}		
+			}
 		}
+
+	MODULE
+	{
+		name = ModuleFuelTanks
+		volume = 2340
+		type = ServiceModule
+		basemass = -1
+		TANK
+		{
+			name = LqdHydrogen
+			amount = 413
+			maxAmount = 413
+		}
+		TANK
+		{
+			name = LqdOxygen
+			amount = 317
+			maxAmount = 317
+		}
+		TANK
+		{
+			name = HTP
+			amount = 150
+			maxAmount = 150
+		}
+		TANK
+		{
+			name = Water
+			amount = 101
+			maxAmount = 101
+		}
+		TANK
+		{
+			name = WasteWater
+			amount = 0
+			maxAmount = 315
+		}
+		TANK
+		{
+			name = Oxygen
+			amount = 0
+			maxAmount = 10
+		}
+		TANK
+		{
+			name = ElectricCharge
+			amount = 552096
+			maxAmount = 762048
+		}
+	}
 
 	MODULE
 	{
@@ -91,85 +142,97 @@ PART
 		ejectionForce = 300
 		staged = false
 	}
-
-	RESOURCE
-	{
-		name = MonoPropellant
-		amount = 100
-		maxAmount = 100
-	}
-	RESOURCE
-	{
-		name = LiquidFuel
-		amount = 109
-		maxAmount = 109
-	}
-
-	RESOURCE
-	{
-		name = Oxidizer
-		amount = 174
-		maxAmount = 174
-	}
-
-	MODULE
-		{
-			name = ModuleRCSFX
-			stagingEnabled = False
-			thrusterTransformName = RCSTHRUSTER
-			thrusterPower = 1.0
-			resourceName = MonoPropellant
-			resourceFlowMode = STAGE_PRIORITY_FLOW
-			runningEffectName = runningrcs
-			enableRoll = False
-			enableYaw = False
-			enablePitch = False
-			enableX = False
-			enableY = False
-			enableZ = True
-			atmosphereCurve
-			{
-			key = 0 290
-			key = 1 275
-			}
-		}
-
-
 	MODULE
 	{
-		name = ModuleSurfaceFX
-		thrustProviderModuleIndex = 0
-		fxMax = 0.4
-		maxDistance = 20
-		falloff = 2
-		thrustTransformName = thrustTransform
-	}
+		name = ModuleRCSFX
+		stagingEnabled = True
+		thrusterTransformName = RCSTHRUSTER
+		thrusterPower = 0.445
 
-	MODULE
-	{
-		name = ModuleEngines
-		thrustVectorTransformName = thrustTransform
-		exhaustDamage = true
-		ignitionThreshold = 0.1
-		minThrust = 0
-		maxThrust = 75
-		heatProduction = 200
-		fxOffset = 0, 0, 0.28
+		resourceFlowMode = STACK_PRIORITY_SEARCH
+		runningEffectName = runningrcs
+		enableRoll = False
+		enableYaw = False
+		enablePitch = False
+		enableX = True
+		enableY = True
+		enableZ = True
+
 		PROPELLANT
 		{
-			name = LiquidFuel
-					ratio = 0.9
-			DrawGauge = True
+			name = HTP
+			ratio = 1.0
 		}
-		PROPELLANT
-		{
-			name = Oxidizer
-			ratio = 1.1
-		}
+
 		atmosphereCurve
 		{
-		 key = 0 300
-		 key = 1 210
+			key = 0 290
+			key = 1 275
+		}
+	}
+}
+
+//	================================================================================
+//	TAC Life Support Compatibility
+//	================================================================================
+@PART[ROC-DynaAftBay]:FOR[ROCapsules]:NEEDS[TacLifeSupport]
+{
+	MODULE
+	{
+		name = TacGenericConverter
+		%converterName = Fuel Cell
+		%StartActionName = Start Fuel Cell
+		%StopActionName = Stop Fuel Cell
+		%conversionRate = 1.0
+		//inputResources = LqdHydrogen, 0.000296379, LqdOxygen, 0.000210317
+		//outputResources = WasteWater, 0.00025967179, true, ElectricCharge, 2.2, true
+		INPUT_RESOURCE
+		{
+			%ResourceName = LqdHydrogen
+			%Ratio = 0.000296379
+		}
+		INPUT_RESOURCE
+		{
+			%ResourceName = LqdOxygen
+			%Ratio = 0.000210317
+		}		
+		OUTPUT_RESOURCE
+		{
+			%ResourceName = WasteWater
+			%Ratio = 0.00025967179
+			%DumpExcess = true
+		}
+		OUTPUT_RESOURCE
+		{
+			%ResourceName = ElectricCharge
+			%Ratio = 2.2
+			%DumpExcess = false // if the batteries are full, we would want the full cell to stop running, right?
+		}
+	}
+	MODULE
+	{
+		name = TacGenericConverter
+		%converterName = LOX-O2
+		%StartActionName = Start Oxygen Generator
+		%StopActionName = Stop Oxygen Generator
+		%conversionRate = 2.0
+		//inputResources = LqdOxygen, 0.0000085058788, ElectricCharge, 0.025
+		//outputResources = Oxygen, 0.006883126, false
+		INPUT_RESOURCE
+		{
+			%ResourceName = LqdOxygen
+			%Ratio = 0.0000085058788
+		}
+		INPUT_RESOURCE
+		{
+			%ResourceName = ElectricCharge
+			%Ratio = 0.025
+		}
+		OUTPUT_RESOURCE
+		{
+			%ResourceName = Oxygen
+			%Ratio = 0.006883126
+			%DumpExcess = false
 		}
 	}
 }
