--- a/GameData/ROCapsules/PartConfigs/Dynasoar/DynaBody.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/DynaBody.cfg
@@ -23,6 +23,7 @@ PART
 	node_stack_bay = 0.0, -0.224, 0.288, 0.0, 0.0, -1.0, 1
 
 	//CoLOffset = 0, 0.57, 0
+	CoMOffset = 0, 0.5, 0
 
 	TechRequired = basicRocketry
 	entryCost = 7000
@@ -35,13 +36,14 @@ PART
 
 	attachRules = 1,0,1,1,0
 
-	mass = 3.4
+	mass = 3.0
 	dragModelType = default
 	maximum_drag = 0.1
 	minimum_drag = 0.1
 	angularDrag = 2
 	crashTolerance = 25
-	maxTemp = 2400
+	maxTemp = 900
+	skinMaxTemp = 2283
 	explosionPotential = 0.1
 	fuelCrossFeed = True
 	CrewCapacity = 1
@@ -80,7 +82,7 @@ PART
 					speed = 1.0 1.0
 					localRotation = -90, 0, 0
 				}
-			}		
+			}
 		}
 
 	INTERNAL
@@ -100,47 +102,57 @@ PART
 		}
 	}
 
-	MODULE:NEEDS[RasterPropMonitor}
+	MODULE:NEEDS[RasterPropMonitor]
 	{
 		name = RasterPropMonitorComputer
 	}
 
-	RESOURCE
+	MODULE
 	{
-		name = ElectricCharge
-		amount = 350
-		maxAmount = 350
-	}
-
-	RESOURCE
-	{
-		name = HTP
-		amount = 50
-		maxAmount = 50
+		name = ModuleFuelTanks
+		type = ServiceModule
+		volume = 525
+		basemass = -1
+		TANK
+		{
+			name = ElectricCharge
+			amount = 14400
+			maxAmount = 14400
+		}
+		TANK
+		{
+			name = HTP
+			amount = 100
+			maxAmount = 100
+		}
 	}
 
 	MODULE
-		{
-			name = ModuleRCSFX
-			stagingEnabled = False
-			thrusterTransformName = RCSTHRUSTER
-			thrusterPower = 1.0
-			resourceName = HTP
-			resourceFlowMode = STAGE_PRIORITY_FLOW
-			runningEffectName = runningrcs
-			enableRoll = False
-			enableYaw = True
-			enablePitch = True
-			enableX = True
-			enableY = True
-			enableZ = False
+	{
+		name = ModuleRCSFX
+		stagingEnabled = True
+		thrusterTransformName = RCSTHRUSTER
+		thrusterPower = 0.445
+		resourceFlowMode = STACK_PRIORITY_SEARCH
+		runningEffectName = runningrcs
+		enableRoll = False
+		enableYaw = True
+		enablePitch = True
+		enableX = True
+		enableY = True
+		enableZ = False
 
-			atmosphereCurve
-			{
-				key = 0 290
-				key = 1 275
-			}
+		PROPELLANT
+		{
+			name = HTP
+			ratio = 1.0
 		}
+		atmosphereCurve
+		{
+			key = 0 137
+			key = 1 57
+		}
+	}
 
 	MODULE
 	{
@@ -180,28 +192,4 @@ PART
 		packetFloor = .1
 		packetCeiling = 5
 	}
-
-	MODULE:NEEDS[!Kerbalism]
-	{
-		name = ModuleGenerator
-		isAlwaysActive = false
-		requiresAllinputs = true
-		resourceThreshold = 0.01
-		activateGUIName = Fuel Cell On
-		shutdownGUIName = Fuel Cell Off
-		hideUIwhenUnavailable = True
-		efficiency = 95
-		
-		INPUT_RESOURCE
-		{
-			name = MonoPropellant
-			rate = 0.005
-		}
-		OUTPUT_RESOURCE
-		{
-			name = ElectricCharge
-			rate = 0.1
-		}
-	}
-
 }
