--- a/GameData/ROCapsules/PartConfigs/Dynasoar/DynaWingLeft.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/DynaWingLeft.cfg
@@ -20,8 +20,8 @@ PART
 	
 	attachRules = 1,1,1,1,1
 
-
 	//CoLOffset = 0, 0.57, 0
+	CoMOffset = -0.7, 4.0, 1.5
 
 	TechRequired = aerodynamicSystems
 	entryCost = 7000
@@ -32,7 +32,7 @@ PART
 	manufacturer = Boeing
 	description = Left wing and rudder of the DynaSoar. Limit its aero functionality only to Yaw. Also limit its RCS functionality to Roll only via the actuation toggles. Rudder fins can be used as an airbrake. Add them to the Brakes action group.
 
-	mass = 0.900
+	mass = 0.600
 	thermalMassModifier = 4.0
 	heatConductivity = 0.06
 	emissiveConstant = 0.95
@@ -43,7 +43,11 @@ PART
 	crashTolerance = 15
 	breakingForce = 999
 	breakingTorque = 999
-	maxTemp = 3400
+	maxTemp = 1273
+	skinMaxTemp = 2283
+	
+	bodyLiftMultiplier = 2
+
 
 	EFFECTS
 		{
@@ -77,26 +81,42 @@ PART
 		}
 
 	MODULE
+	{
+		name = ModuleRCSFX
+		stagingEnabled = True
+		thrusterTransformName = RCSTHRUSTER
+		thrusterPower = 0.445
+
+		resourceFlowMode = STACK_PRIORITY_SEARCH
+		runningEffectName = runningrcs
+		enableRoll = True
+		enableYaw = False
+		enablePitch = False
+		enableX = False
+		enableY = False
+		enableZ = False
+
+		PROPELLANT
 		{
-			name = ModuleRCSFX
-			stagingEnabled = False
-			thrusterTransformName = RCSTHRUSTER
-			thrusterPower = 1.0
-			resourceName = HTP
-			resourceFlowMode = STAGE_PRIORITY_FLOW
-			runningEffectName = runningrcs
-			enableRoll = True
-			enableYaw = False
-			enablePitch = False
-			enableX = False
-			enableY = False
-			enableZ = False	
-			atmosphereCurve
-			{
+			name = HTP
+			ratio = 1.0
+		}
+
+		atmosphereCurve
+		{
 			key = 0 290
 			key = 1 275
-			}
 		}
+	}
+
+	MODULE
+	{
+		name = ModuleLiftingSurface
+		useInternalDragModel = True
+		deflectionLiftCoeff = 1.88
+		dragAtMaxAoA = 0.28
+		dragAtMinAoA = 0.0
+	}
 
 	MODULE
 	{
@@ -113,4 +133,16 @@ PART
 		ignoreRoll = True
 		deployInvert = True
 	}
+
+	//MODULE
+	//{
+	//	name = FARControllableSurface
+	//	MAC = 3.57
+	//	MidChordSweep = 60.11
+	//	b_2 = 1.75
+	//	TaperRatio = 0.120
+	//	maxdeflect = 20
+	//	ctrlSurfFrac = 0.1
+	//	nonSideAttach = 0
+	//}
 }
