--- a/GameData/ROCapsules/PartConfigs/Dynasoar/dynadockingarms.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/dynadockingarms.cfg
@@ -1,66 +1,69 @@
 PART
 {
-name = dyna_docking_arms
-module = Part
-author = silentVelcro
+	name = ROC-DynaDockingArms
+	module = Part
+	author = silentVelcro, capkirk
 
-MODEL
-{
-model=LonesomeRobots/DynaSoar/Dynadockingarms
-scale = 1.0, 1.0, 1.0
-}
-rescaleFactor = 1
+	RSSROConfig = true
 
-node_stack_top = -0.446, 0.0, 0.0, 1.0, 0.0, 0.0, 1
+	MODEL
+	{
+		model = ROCapsules/Assets/LonesomeRobot/Dynadockingarms
+		scale = 1.0, 1.0, 1.0
+	}
 
-TechRequired = specializedConstruction
-entryCost = 3000
-cost = 575
-category = Coupling
-subcategory = 0
-title = Dyna Docking Arms
-manufacturer = LonesomeRobots
-description = DynaSoar Docking arms. Attach them on the front left node of the DynaSoar body. They include a docking radar(JSI). Don’t forget to jettison them before reentry.
+	rescaleFactor = 1.5625
 
-attachRules = 1,0,1,1,1
+	node_stack_top = -0.446, 0.0, 0.0, 1.0, 0.0, 0.0, 1
 
-fx_gasBurst_white = 0.446, 0.0, 0.0, 1.0, 0.0, 0.0, decouple
-sound_decoupler_fire = decouple
+	TechRequired = specializedConstruction
+	entryCost = 3000
+	cost = 575
+	category = Coupling
+	subcategory = 0
+	title = DynaSoar Docking Arms
+	manufacturer = Boeing
+	description = DynaSoar Docking arms. Attach them on the front left node of the DynaSoar body. They include a docking radar(JSI). Don’t forget to jettison them before reentry.
 
-mass = 0.05
-dragModelType = default
-maximum_drag = 0.2
-minimum_drag = 0.2
-angularDrag = 2
-crashTolerance = 9
-maxTemp = 1000
-fuelCrossFeed = True
-stageOffset = 1
-childStageOffset = 1
+	attachRules = 1,0,1,1,1
 
-MODULE
-{
-name = ModuleAnimateGeneric
-animationName = DynaDockDeploy
-isOneShot = false
-startEventGUIName = Extend Docking Arms
-endEventGUIName = Retract Docking Arms
-actionGUIName = Toggle Docking Arms
-allowAnimationWhileShielded = False
-}
+	fx_gasBurst_white = 0.446, 0.0, 0.0, 1.0, 0.0, 0.0, decouple
+	sound_decoupler_fire = decouple
 
-MODULE
-{
-name = ModuleDockingNode
-referenceAttachNode = dockingNode
-nodeType = size1
-}
+	mass = 0.05
+	dragModelType = default
+	maximum_drag = 0.2
+	minimum_drag = 0.2
+	angularDrag = 2
+	crashTolerance = 9
+	maxTemp = 1000
+	fuelCrossFeed = True
+	stageOffset = 1
+	childStageOffset = 1
 
-MODULE
-{
-name = ModuleDecouple
-ejectionForce = 10
-explosiveNodeID = top
-}
+	MODULE
+	{
+		name = ModuleAnimateGeneric
+		animationName = DynaDockDeploy
+		isOneShot = false
+		startEventGUIName = Extend Docking Arms
+		endEventGUIName = Retract Docking Arms
+		actionGUIName = Toggle Docking Arms
+		allowAnimationWhileShielded = False
+	}
+
+	MODULE
+	{
+		name = ModuleDockingNode
+		referenceAttachNode = dockingNode
+		nodeType = Dyna
+	}
+
+	MODULE
+	{
+		name = ModuleDecouple
+		ejectionForce = 10
+		explosiveNodeID = top
+	}
 
 }
