--- a/GameData/ROCapsules/PartConfigs/Dynasoar/dynadockingsystem.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/dynadockingsystem.cfg
@@ -1,54 +1,56 @@
 PART
 {
-name = dyna_docking_system
-module = Part
-author = silentVelcro
+	name = ROC-DynaDockingSystem
+	module = Part
+	author = silentVelcro
 
-MODEL
-{
-model=LonesomeRobots/DynaSoar/SIVDOCK
-scale = 1.0, 1.0, 1.0
-}
-scale = 1.0
-rescaleFactor = 1
+	RSSROConfig = true
 
-node_stack_top = 0.0, 0.0, 1.83, 0.0, 0.0, -1.0, 1
+	MODEL
+	{
+		model = ROCapsules/Assets/LonesomeRobot/SIVDOCK
+		scale = 1.0, 1.0, 1.0
+	}
 
-TechRequired = specializedConstruction
-entryCost = 4000
-cost = 1200
-category = Coupling
-subcategory = 0
-title = DynaSoar Docking Rod
-manufacturer = LonesomeRobots
-description = SIV Docking rod for the DynaSoar. This is where the docking arms attach.
+	scale = 1.0
+	rescaleFactor = 1.5625
 
-attachRules = 1,0,1,1,1
+	node_stack_top = 0.0, 0.0, 1.83, 0.0, 0.0, -1.0, 1
 
-mass = 0.2
-dragModelType = default
-maximum_drag = 0.2
-minimum_drag = 0.2
-angularDrag = 2
-crashTolerance = 9
-maxTemp = 2000
-fuelCrossFeed = True
+	TechRequired = specializedConstruction
+	entryCost = 4000
+	cost = 1200
+	category = Coupling
+	subcategory = 0
+	title = DynaSoar Docking Rod
+	manufacturer = Boeing
+	description = SIV Docking rod for the DynaSoar. This is where the docking arms attach.
 
-MODULE
-{
-name = ModuleAnimateGeneric
-animationName = DynaDockAnim
-isOneShot = false
-startEventGUIName = Deploy Docking Rod
-endEventGUIName = Undeploy Docking Rod
-actionGUIName = Toggle Docking Rod
-}
+	attachRules = 1,0,1,1,1
 
-MODULE
-{
-name = ModuleDockingNode
-referenceAttachNode = dockingNode
-nodeType = size1
-}
+	mass = 0.2
+	dragModelType = default
+	maximum_drag = 0.2
+	minimum_drag = 0.2
+	angularDrag = 2
+	crashTolerance = 9
+	maxTemp = 2000
+	fuelCrossFeed = True
 
+	MODULE
+	{
+		name = ModuleAnimateGeneric
+		animationName = DynaDockAnim
+		isOneShot = false
+		startEventGUIName = Deploy Docking Rod
+		endEventGUIName = Undeploy Docking Rod
+		actionGUIName = Toggle Docking Rod
+	}
+
+	MODULE
+	{
+		name = ModuleDockingNode
+		referenceAttachNode = dockingNode
+		nodeType = Dyna
+	}
 }
