--- a/GameData/ROCapsules/PartConfigs/Dynasoar/DynaDragChute.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/DynaDragChute.cfg
@@ -5,11 +5,13 @@ PART
 	module = Part
 	author = silentVelcro, capkirk
 
+	RSSROConfig = true
+
 	rescaleFactor = 1.5625
 
 	MODEL
 	{
-		model=LonesomeRobots/DynaSoar/Dynachute
+		model = ROCapsules/Assets/LonesomeRobot/Dynachute
 	}
 
 	node_stack_top = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 1
@@ -22,7 +24,7 @@ PART
 	cost = 1600
 	category = Utility
 	subcategory = 0
-	manufacturer = LonesomeRobots
+	manufacturer = Boeing
 	title = DynaSoar Drag Chute
 	description = Dynasoar drag chute to use while landing. Place it on the back of the DynaSoar body. Compatible with RealChute.
 
