--- a/GameData/ROCapsules/PartConfigs/Dynasoar/DynaElevonL.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/DynaElevonL.cfg
@@ -37,11 +37,13 @@ PART
 	maximum_drag = 0.02
 	minimum_drag = 0.02
 	angularDrag = 2
+
 	crashTolerance = 15
 	breakingForce = 999
 	breakingTorque = 999
-	maxTemp = 3400
-	explosionPotential = 0.1
+
+	maxTemp = 1273
+	skinMaxTemp = 2383
 	bulkheadProfiles = srf
 
 	MODULE
