--- a/GameData/ROCapsules/PartConfigs/Dynasoar/DynaElevonR.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/DynaElevonR.cfg
@@ -37,11 +37,13 @@ PART
 	maximum_drag = 0.02
 	minimum_drag = 0.02
 	angularDrag = 2
+
 	crashTolerance = 15
 	breakingForce = 999
 	breakingTorque = 999
+
 	maxTemp = 1273
-	skinMaxTemp = 2283
+	skinMaxTemp = 2383
 	bulkheadProfiles = srf
 
 	MODULE
@@ -53,7 +55,7 @@ PART
 		ctrlSurfaceRange = 20
 		ctrlSurfaceArea = 0.95
 		actuatorSpeed = 20
-		transformName = Elevon_L
+		transformName = Elevon_R
 		ignorePitch = False
 		ignoreYaw = True
 		ignoreRoll = False
