--- a/GameData/ROCapsules/PartConfigs/Dynasoar/DynaWingRight.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/DynaWingRight.cfg
@@ -15,13 +15,13 @@ PART
 	rescaleFactor = 1.5625
 
 	node_stack_wing = 0.42, 2.6, 1.2, 0, 0, 1, 1
-	node_stack_eleR = 0.47, 0.8, 0.71, 0, -1, 0, 1
+	node_stack_eleR = 0.47, 0.832, 0.71, 0, -1, 0, 1
 	node_stack_gear = 0.45, 0.96, 0.69, 1, 0, 0, 1
 	
 	attachRules = 1,1,1,1,1
 
 	//CoLOffset = 0, 0.57, 0
-	CoMOffset = 0.7, 4.0, 1.5
+	CoMOffset = 0.6, 4.0, 1.5
 
 	TechRequired = aerodynamicSystems
 	entryCost = 7000
@@ -33,53 +33,53 @@ PART
 	description = Right wing and rudder of the DynaSoar. Limit its aero functionality only to Yaw. Also limit its RCS functionality to Roll only via the actuation toggles. Rudder fins can be used as an airbrake. Add them to the Brakes action group.
 
 	mass = 0.600
-
 	thermalMassModifier = 4.0
-	heatConductivity = 0.06
+	heatConductivity = 0.1
 	emissiveConstant = 0.95
-	dragModelType = none
-	maximum_drag = 0.02
-	minimum_drag = 0.02
-	angularDrag = 2
+	//dragModelType = none
+	//maximum_drag = 0.02
+	//minimum_drag = 0.02
+	//angularDrag = 2
 
 	crashTolerance = 15
 	breakingForce = 999
 	breakingTorque = 999
 
-	maxTemp = 3400
-	
+	maxTemp = 1273
+	skinMaxTemp = 2383
+
 	bodyLiftMultiplier = 2
 
 	EFFECTS
+	{
+		runningrcs
 		{
-			runningrcs
+			AUDIO_MULTI_POOL
 			{
-				AUDIO_MULTI_POOL
-				{
-					channel = Ship
-					transformName = RCSTHRUSTER
-					clip = sound_rocket_mini
-					volume = 0.0 0.0
-					volume = 0.1 0.0
-					volume = 0.5 0.025
-					volume = 1.0 0.1
-					pitch = 0.0 0.75
-					pitch = 1.0 1.5
-					loop = true
-				}
-				MODEL_MULTI_PARTICLE
-				{
-					modelName = Squad/FX/Monoprop_small
-					transformName = RCSTHRUSTER
-					emission = 0.0 0.0
-					emission = 0.1 0.0
-					emission = 1.0 1.0
-					speed = 0.0 0.8
-					speed = 1.0 1.0
-					localRotation = -90, 0, 0
-				}
+				channel = Ship
+				transformName = RCSTHRUSTER
+				clip = sound_rocket_mini
+				volume = 0.0 0.0
+				volume = 0.1 0.0
+				volume = 0.5 0.025
+				volume = 1.0 0.1
+				pitch = 0.0 0.75
+				pitch = 1.0 1.5
+				loop = true
+			}
+			MODEL_MULTI_PARTICLE
+			{
+				modelName = Squad/FX/Monoprop_small
+				transformName = RCSTHRUSTER
+				emission = 0.0 0.0
+				emission = 0.1 0.0
+				emission = 1.0 1.0
+				speed = 0.0 0.8
+				speed = 1.0 1.0
+				localRotation = -90, 0, 0
 			}
 		}
+	}
 
 	MODULE
 	{
@@ -105,8 +105,8 @@ PART
 
 		atmosphereCurve
 		{
-			key = 0 290
-			key = 1 275
+			key = 0 137
+			key = 1 57
 		}
 	}
 
@@ -114,9 +114,9 @@ PART
 	{
 		name = ModuleLiftingSurface
 		useInternalDragModel = True
-		deflectionLiftCoeff = 1.88
+		deflectionLiftCoeff = 10
 		dragAtMaxAoA = 0.28
-		dragAtMinAoA = 0.0
+		dragAtMinAoA = 0.01
 	}
 
 	MODULE
@@ -128,7 +128,7 @@ PART
 		ctrlSurfaceRange = 20
 		ctrlSurfaceArea = 0.95
 		actuatorSpeed = 20
-		transformName = Rudder_L
+		transformName = Rudder_R
 		ignorePitch = True
 		ignoreYaw = False
 		ignoreRoll = True
