--- a/GameData/ROCapsules/PartConfigs/Dynasoar/DynaElevonL.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/DynaElevonL.cfg
@@ -2,7 +2,7 @@ PART
 {
 	name = ROC-DynaElevonL
 	module = Part
-	author = silentVelcro
+	author = silentVelcro, capkirk
 	
 	RSSROConfig = true
 
@@ -12,7 +12,7 @@ PART
 	}
 
 	scale = 1
-	rescaleFactor = 1.5625
+	rescaleFactor = 1.7364
 
 	TechRequired = aerodynamicSystems
 	entryCost = 3400
