--- a/GameData/ROCapsules/PartConfigs/Dynasoar/DynaSkidFront.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/DynaSkidFront.cfg
@@ -2,7 +2,7 @@ PART
 {
 	name = ROC-DynaSkidFront
 	module = Part
-	author = silentVelcro
+	author = silentVelcro, capkirk
 
 	MODEL
 	{
@@ -11,7 +11,7 @@ PART
 		rotation = -90,0,0
 	}
 
-	rescaleFactor = 1.5625
+	rescaleFactor = 1.7364
 
 	node_stack_noseSkid = 0, 0, 0, 0, 0, -1, 1
 	attachRules = 1,0,1,1,0
