--- a/GameData/ROCapsules/PartConfigs/Dynasoar/DynaWingLeft.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/DynaWingLeft.cfg
@@ -12,7 +12,7 @@ PART
 	}
 
 	scale = 1.0
-	rescaleFactor = 1.5625
+	rescaleFactor = 1.7364
 
 	node_stack_wing = -0.42, 2.6, 1.2, 0, 0, 1, 1
 	node_stack_eleL = -0.47, 0.832, 0.72, 0, -1, 0, 1
@@ -21,7 +21,7 @@ PART
 	attachRules = 1,1,1,1,1
 
 	//CoLOffset = 0, 0.57, 0
-	CoMOffset = -0.6, 4.0, 1.5
+	CoMOffset = -0.66, 4.44, 1.66
 
 	TechRequired = aerodynamicSystems
 	entryCost = 7000
@@ -110,14 +110,14 @@ PART
 		}
 	}
 
-	MODULE
-	{
-		name = ModuleLiftingSurface
-		useInternalDragModel = True
-		deflectionLiftCoeff = 10
-		dragAtMaxAoA = 0.28
-		dragAtMinAoA = 0.01
-	}
+	//MODULE
+	//{
+	//	name = ModuleLiftingSurface
+	//	useInternalDragModel = True
+	//	deflectionLiftCoeff = 10
+	//	dragAtMaxAoA = 0.28
+	//	dragAtMinAoA = 0.01
+	//}
 
 	MODULE
 	{
@@ -135,15 +135,15 @@ PART
 		deployInvert = True
 	}
 
-	//MODULE
-	//{
-	//	name = FARControllableSurface
-	//	MAC = 3.57
-	//	MidChordSweep = 60.11
-	//	b_2 = 1.75
-	//	TaperRatio = 0.120
-	//	maxdeflect = 20
-	//	ctrlSurfFrac = 0.1
-	//	nonSideAttach = 0
-	//}
+	MODULE
+	{
+		name = FARControllableSurface
+		MAC = 3.9
+		MidChordSweep = 60
+		b_2 = 1.8
+		TaperRatio = 0.110
+		maxdeflect = 30
+		ctrlSurfFrac = 0.1
+		nonSideAttach = 0
+	}
 }
