--- a/GameData/ROCapsules/PartConfigs/Dynasoar/DynaBay.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/DynaBay.cfg
@@ -2,7 +2,7 @@ PART
 {
 	name = ROC-DynaBay
 	module = Part
-	author = silentVelcro
+	author = silentVelcro, capkirk
 
 	RSSROConfig = true
 
@@ -11,7 +11,7 @@ PART
 		model = ROCapsules/Assets/LonesomeRobot/DynaBay
 	}
 
-	rescaleFactor = 1.5625
+	rescaleFactor = 1.7364
 
 	node_stack_bay = 0.0, -0.224, 0.288, 0.0, 0.0, 1.0, 1
 	node_stack_crg1 = 0.0, 0.381, -0.096, 0.0, 1.0, 0.0, 1
