--- a/GameData/ROCapsules/PartConfigs/Dynasoar/DynaElevonR.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/DynaElevonR.cfg
@@ -46,30 +46,35 @@ PART
 	skinMaxTemp = 2383
 	bulkheadProfiles = srf
 
+	//MODULE
+	//{
+	//	name = ModuleControlSurface
+	//	useInternalDragModel = True
+	//	dragCoeff = 0.1
+	//	deflectionLiftCoeff = 0.56
+	//	ctrlSurfaceRange = 20
+	//	ctrlSurfaceArea = 0.95
+	//	actuatorSpeed = 20
+	//	transformName = Elevon_R
+	//	ignorePitch = False
+	//	ignoreYaw = True
+	//	ignoreRoll = False
+	//}
+
 	MODULE
 	{
-		name = ModuleControlSurface
-		useInternalDragModel = True
-		dragCoeff = 0.1
-		deflectionLiftCoeff = 0.56
-		ctrlSurfaceRange = 20
-		ctrlSurfaceArea = 0.95
-		actuatorSpeed = 20
+		name = FARControllableSurface
+		MAC = 1.46
+		MidChordSweep = 8.83
+		b_2 = 1.61
+		TaperRatio = 1.0
+		maxdeflect = 20
+		ctrlSurfFrac = 1
+		nonSideAttach = 1
 		transformName = Elevon_R
+
 		ignorePitch = False
 		ignoreYaw = True
 		ignoreRoll = False
 	}
-
-	//MODULE
-	//{
-	//	name = FARControllableSurface
-	//	MAC = 1.45
-	//	MidChordSweep = 4.08
-	//	b_2 = 1.75
-	//	TaperRatio = 1.0
-	//	maxdeflect = 20
-	//	ctrlSurfFrac = 1
-	//	nonSideAttach = 1
-	//}
 }
