--- a/GameData/ROCapsules/PartConfigs/Dynasoar/DynaWingLeft.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/DynaWingLeft.cfg
@@ -115,7 +115,7 @@ PART
 	//	name = ModuleLiftingSurface
 	//	useInternalDragModel = True
 	//	deflectionLiftCoeff = 10
-	//	dragAtMaxAoA = 0.28
+	//	dragAtMaxAoA = 0.1
 	//	dragAtMinAoA = 0.01
 	//}
 
@@ -145,5 +145,6 @@ PART
 		maxdeflect = 30
 		ctrlSurfFrac = 0.1
 		nonSideAttach = 0
+		transformName = Rudder_L
 	}
 }
