--- a/GameData/ROCapsules/PartConfigs/Dynasoar/DynaBody.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/DynaBody.cfg
@@ -36,7 +36,13 @@ PART
 
 	attachRules = 1,0,1,1,0
 
-	mass = 3.0
+	//Source: https://ntrs.nasa.gov/archive/nasa/casi.ntrs.nasa.gov/19720063137.pdf
+	//Mass on landing (dry mass + 1000 lbs payload): 9060 lbs
+	//Dry mass: 8060 lbs = 3655 kg
+	//FAR automatically sets wing mass at 312 kg + 62 kg per wing
+	//Skid mass 22 kg each (guess)
+	//Fuselage mass: 2841 kg
+	mass = 2.841
 	dragModelType = default
 	maximum_drag = 0.1
 	minimum_drag = 0.1
