--- a/GameData/ROCapsules/PartConfigs/Dynasoar/DynaAftBay.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/DynaAftBay.cfg
@@ -34,11 +34,11 @@ PART
 	subcategory = 0
 	title = Dynasoar Aft Bay
 	manufacturer = Boeing
-	description = Provides limited orbital capabilities and also used for de-orbiting. Also features RCS. Limit the RCS functionality to Fore/Aft only via the actuation toggles. Don’t forget to jettison the engine pack before reentry.
+	description = Contains the Liquid Hydrogen and Liquid Oxygen tanks for the DynaSoar fuel cells, as well as a solid rocket motor for abort or emergency deorbiting.
 
 	attachRules = 1,0,1,1,0
 
-	mass = 0.370
+	mass = 0.500
 	dragModelType = default
 	maximum_drag = 0.21
 	minimum_drag = 0.21
@@ -52,42 +52,88 @@ PART
 	childStageOffset = 1
 
 	EFFECTS
+	{
+		runningrcs
 		{
-			runningrcs
+			AUDIO_MULTI_POOL
 			{
-				AUDIO_MULTI_POOL
-				{
-					channel = Ship
-					transformName = RCSTHRUSTER
-					clip = sound_rocket_mini
-					volume = 0.0 0.0
-					volume = 0.1 0.0
-					volume = 0.5 0.025
-					volume = 1.0 0.1
-					pitch = 0.0 0.75
-					pitch = 1.0 1.5
-					loop = true
-				}
-				MODEL_MULTI_PARTICLE
-				{
-					modelName = Squad/FX/Monoprop_small
-					transformName = RCSTHRUSTER
-					emission = 0.0 0.0
-					emission = 0.1 0.0
-					emission = 1.0 1.0
-					speed = 0.0 0.8
-					speed = 1.0 1.0
-					localRotation = -90, 0, 0
-				}
+				channel = Ship
+				transformName = RCSTHRUSTER
+				clip = sound_rocket_mini
+				volume = 0.0 0.0
+				volume = 0.1 0.0
+				volume = 0.5 0.025
+				volume = 1.0 0.1
+				pitch = 0.0 0.75
+				pitch = 1.0 1.5
+				loop = true
+			}
+			MODEL_MULTI_PARTICLE
+			{
+				modelName = Squad/FX/Monoprop_small
+				transformName = RCSTHRUSTER
+				emission = 0.0 0.0
+				emission = 0.1 0.0
+				emission = 1.0 1.0
+				speed = 0.0 0.8
+				speed = 1.0 1.0
+				localRotation = -90, 0, 0
 			}
 		}
+	}
+
+	MODULE
+	{
+		name = ModuleEnginesRF
+		transformName = thrustTransform
+		EngineType = SolidBooster
+		allowShutdown = False
+		throttleLocked = True
+	}
+	
+	MODULE
+	{
+		name = ModuleEngineConfigs
+		type = ModuleEngines
+		configuration = SR73
+		
+		CONFIG
+		{
+			name = SR73
+			minThrust = 624
+			maxThrust = 624
+			heatProduction = 100
+			ullage = False
+			pressureFed = False
+			ignitions = 1
+			
+			PROPELLANT
+			{
+				name = HTPB
+				ratio = 1.0
+				DrawGauge = True
+			}
+			
+			atmosphereCurve
+			{
+				key = 0 241.4
+				key = 1 214
+			}
+		}
+	}
 
 	MODULE
 	{
 		name = ModuleFuelTanks
-		volume = 2340
+		volume = 3140
 		type = ServiceModule
 		basemass = -1
+		TANK
+		{
+			name = HTPB
+			amount = 1770
+			maxAmount = 1770
+		}
 		TANK
 		{
 			name = LqdHydrogen
@@ -127,7 +173,7 @@ PART
 		TANK
 		{
 			name = ElectricCharge
-			amount = 552096
+			amount = 762048
 			maxAmount = 762048
 		}
 	}
@@ -140,6 +186,7 @@ PART
 		ejectionForce = 300
 		staged = false
 	}
+
 	MODULE
 	{
 		name = ModuleRCSFX
@@ -181,7 +228,7 @@ PART
 		%converterName = Fuel Cell
 		%StartActionName = Start Fuel Cell
 		%StopActionName = Stop Fuel Cell
-		%conversionRate = 1.0
+		%conversionRate = 2.0
 		//inputResources = LqdHydrogen, 0.000296379, LqdOxygen, 0.000210317
 		//outputResources = WasteWater, 0.00025967179, true, ElectricCharge, 2.2, true
 		INPUT_RESOURCE
@@ -213,7 +260,7 @@ PART
 		%converterName = LOX-O2
 		%StartActionName = Start Oxygen Generator
 		%StopActionName = Stop Oxygen Generator
-		%conversionRate = 2.0
+		%conversionRate = 3.0
 		//inputResources = LqdOxygen, 0.0000085058788, ElectricCharge, 0.025
 		//outputResources = Oxygen, 0.006883126, false
 		INPUT_RESOURCE
